adding shotgun and auto firing modes

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -191,8 +191,9 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MagicLeap_Right_Trackpad_X)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=None)
 +AxisMappings=(AxisName="SwapWeapon",Scale=1.000000,Key=MouseWheelAxis)
++AxisMappings=(AxisName="FireHold",Scale=1.000000,Key=LeftMouseButton)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-+ConsoleKeys=|
++ConsoleKeys=None
 
